--- a/src/main/database.properties
+++ b/src/main/database.properties
@@ -1,7 +1,7 @@
 
 DriverClassName=com.mysql.cj.jdbc.Driver
 
-JdbcUrl=jdbc:mysql://localhost:3306/ds_database?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=false
+JdbcUrl=jdbc:mysql://localhost:3306/shopping?serverTimezone=UTC&useUnicode=true&characterEncoding=utf-8&useSSL=false
 
 Username=root
 
