添加了商品图片

--- a/src/main/database.properties
+++ b/src/main/database.properties
@@ -5,7 +5,7 @@ JdbcUrl=jdbc:mysql://localhost:3306/ds_database?serverTimezone=UTC&useUnicode=tr
 
 Username=root
 
-Password=123456
+Password=Lzm200376
 
 MaximumPoolSize=60
 
